--- a/custom-light.scss
+++ b/custom-light.scss
@@ -21,19 +21,23 @@ $font-family-monospace: "iAWriterMonoS-Regular", monospace;
 $headings-font-family: "iAWriterQuattroS-Bold", Figtree, Helvetica, sans-serif !default;
 
 // colors
-$primary: #008000;
+$green: #3c8d0d;
+$red: #b01b2e;
+
+$primary: $green;
 $body-bg: #FFFFFF;
 $navbar-bg: $body-bg;
 $navbar-fg: $primary;
+$code-color: $red;
 
 // navbar
 #quarto-header {
   //font-family: "LEMONMILKPro-Regular", Jost, Helvetica, sans-serif;
   // font-family: "ABCSocialExtendedEdu-Bold", Jost, Helvetica, sans-serif;
-  text-transform: uppercase;
   font-family: $headings-font-family;
 }
 
+// make year links on navbar bigger
 #navbarCollapse > ul.navbar-nav.navbar-nav-scroll.me-auto > li > a > span {
   font-size: 1.5rem;
 }
