Tweaks to themes

--- a/custom-light.scss
+++ b/custom-light.scss
@@ -29,6 +29,7 @@ $body-bg: #FFFFFF;
 $navbar-bg: $body-bg;
 $navbar-fg: $primary;
 $code-color: $red;
+$code-bg: $body-bg;
 
 // navbar
 #quarto-header {
