--- a/custom-dark.scss
+++ b/custom-dark.scss
@@ -19,14 +19,18 @@ $toc-font-size: 1rem;
 
 // colors
 $dark: #181829 !default;
-$primary: #00B200 !default;
+$green: #00B200 !default;
+$red: #FF2743 !default;
+
+$primary: $green;
+
 $secondary: #CCCCCC !default;
 $body-bg: $dark;
 $navbar-bg: $body-bg;
 $navbar-fg: $primary;
 $body-color: $secondary;
 $code-bg: $dark;
-$code-color: $secondary;
+$code-color: $red;
 
 pre code {
 	background-color: $code-bg;
