--- a/custom-light.scss
+++ b/custom-light.scss
@@ -21,7 +21,7 @@ $font-family-monospace: "iAWriterMonoS-Regular", monospace;
 $headings-font-family: "iAWriterQuattroS-Bold", Figtree, Helvetica, sans-serif !default;
 
 // colors
-$green: #3c8d0d;
+$green: #328800;
 $red: #b01b2e;
 
 $primary: $green;
